--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
     },
     "extensions": [
         "vscoss.vscode-ansible",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "hediet.vscode-drawio"
     ]
 }
