--- a/ansible/rpi-dhcpd.yaml
+++ b/ansible/rpi-dhcpd.yaml
@@ -8,7 +8,7 @@
             max-lease-time 7200;
             option subnet-mask 255.255.240.0;
             option broadcast-address 10.88.16.0;
-            # option routers 10.88.16.100;
+            option routers 10.88.16.100;
             option domain-name "management.nightstack.matthijsbos.nl";
 
             subnet 10.88.16.0 netmask 255.255.240.0 {
@@ -29,6 +29,7 @@
             max-lease-time 7200;
             option subnet-mask 255.255.240.0;
             option broadcast-address 10.88.0.0;
+            option routers 10.88.0.100;
             option domain-name "public.nightstack.matthijsbos.nl";
 
             subnet 10.88.0.0 netmask 255.255.240.0 {
@@ -44,6 +45,7 @@
             max-lease-time 7200;
             option subnet-mask 255.255.240.0;
             option broadcast-address 10.88.32.0;
+            option routers 10.88.32.100;
             option domain-name "storage.nightstack.matthijsbos.nl";
 
             subnet 10.88.32.0 netmask 255.255.240.0 {
