--- a/ansible/hosts.yaml
+++ b/ansible/hosts.yaml
@@ -1,17 +1,22 @@
 all:
+    children:
+        compute-nodes:
+            hosts:
+                srv-01:
+                    ansible_host: 10.88.16.1
+                srv-02:
+                    ansible_host: 10.88.16.2
+            vars:
+                ansible_user: nightstack            
     hosts:
-        srv-01:
-            ansible_host: 10.88.16.1
-        srv-02:
-            ansible_host: 10.88.16.2
-        srv-03:
-            ansible_host: 10.88.16.3
-        srv-04:
-            ansible_host: 10.88.16.4
-        srv-05:
-            ansible_host: 10.88.16.5
-        srv-06:
-            ansible_host: 10.88.16.6
+        # srv-03:
+        #     ansible_host: 10.88.16.3
+        # srv-04:
+        #     ansible_host: 10.88.16.4
+        # srv-05:
+        #     ansible_host: 10.88.16.5
+        # srv-06:
+        #     ansible_host: 10.88.16.6
         rpi-01:
             ansible_host: 10.88.16.100
             ansible_user: ubuntu
